# PySpaceMouse

./: .envrc  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  404.html  CNAME  CONTRIBUTING.md  Doxyfile  LICENSE  MANIFEST  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  troubleshooting.md
.github/instructions/: review.instructions.md
.github/workflows/: ci.yaml  deploy-web.yaml  doxygen.yml
CONTRIBUTING/: index.html
docs/: CONTRIBUTING.md  README.md  troubleshooting.md
docs/mouseApi/: examples.md  index.md
examples/: 01_basic.py  02_callbacks.py  03_multi_device.py  04_open_by_path.py  05_discovery.py  06_axis_callbacks.py  07_led.py  08_buttons.py  09_custom_config.py  09_invert_rotations.py  10_custom_config_unity.py  basicExample.py  basicExampleWith.py  callbackExample.py
mouseApi/: index.html
mouseApi/____init_____8py/: index.html
mouseApi/____init_____8py_source/: index.html
mouseApi/annotated/: index.html
mouseApi/api_8py/: index.html
mouseApi/api_8py_source/: index.html
mouseApi/callbacks_8py/: index.html
mouseApi/callbacks_8py_source/: index.html
mouseApi/class_member_enums/: index.html
mouseApi/class_member_functions/: index.html
mouseApi/class_member_typedefs/: index.html
mouseApi/class_member_variables/: index.html
mouseApi/class_members/: index.html
mouseApi/classes/: index.html
mouseApi/classpyspacemouse_1_1callbacks_1_1ButtonCallback/: index.html
mouseApi/classpyspacemouse_1_1callbacks_1_1Config/: index.html
mouseApi/classpyspacemouse_1_1callbacks_1_1DofCallback/: index.html
mouseApi/classpyspacemouse_1_1device_1_1SpaceMouseDevice/: index.html
mouseApi/classpyspacemouse_1_1pyspacemouse_1_1ButtonCallback/: index.html
mouseApi/classpyspacemouse_1_1pyspacemouse_1_1ButtonState/: index.html
mouseApi/classpyspacemouse_1_1pyspacemouse_1_1Config/: index.html
mouseApi/classpyspacemouse_1_1pyspacemouse_1_1DeviceSpec/: index.html
mouseApi/classpyspacemouse_1_1pyspacemouse_1_1DofCallback/: index.html
mouseApi/classpyspacemouse_1_1types_1_1AxisConvention/: index.html
mouseApi/classpyspacemouse_1_1types_1_1AxisSpec/: index.html
mouseApi/classpyspacemouse_1_1types_1_1ButtonSpec/: index.html
mouseApi/classpyspacemouse_1_1types_1_1ButtonState/: index.html
mouseApi/classpyspacemouse_1_1types_1_1DeviceInfo/: index.html
mouseApi/classpyspacemouse_1_1types_1_1SpaceMouseState/: index.html
mouseApi/config__helpers_8py/: index.html
mouseApi/config__helpers_8py_source/: index.html
mouseApi/device_8py/: index.html
mouseApi/device_8py_source/: index.html
mouseApi/dir_4d4c91c635597e458e70163b03149dfd/: index.html
mouseApi/examples/: index.html
mouseApi/files/: index.html
mouseApi/functions/: index.html
mouseApi/hierarchy/: index.html
mouseApi/links/: index.html
mouseApi/loader_8py/: index.html
mouseApi/loader_8py_source/: index.html
mouseApi/macros/: index.html
mouseApi/modules/: index.html
mouseApi/namespace_member_enums/: index.html
mouseApi/namespace_member_functions/: index.html
mouseApi/namespace_member_typedefs/: index.html
mouseApi/namespace_member_variables/: index.html
mouseApi/namespace_members/: index.html
mouseApi/namespacepyspacemouse/: index.html
mouseApi/namespacepyspacemouse_1_1api/: index.html
mouseApi/namespacepyspacemouse_1_1callbacks/: index.html
mouseApi/namespacepyspacemouse_1_1config__helpers/: index.html
mouseApi/namespaces/: index.html
pyspacemouse/: __init__.py  abstraction.py  api.py  callbacks.py  checks.py  config_helpers.py  configuration.py  device.py  devices.py  devices.toml  loader.py  pyspacemouse.py  pyspacemouse_cli.py  spacemouse.py  types.py  utils.py
search/: search_index.json
tests/: hidapi_test.py  test_callbacks_arr.py  test_clb_axis_arr.py  test_config.py  test_mouse.py  test_readme.py
troubleshooting/: index.html
(+16 files in other folders)
